style.css
/* ... */
/*--------------------------------------------------------------
# 6.0 - Alignments
--------------------------------------------------------------*/
.alignleft {
	display: inline;
	float: left;
	margin-right: 1.5em;
}

.alignright {
	display: inline;
	float: right;
	margin-left: 1.5em;
}

.aligncenter {
	display: block;
	clear: both;
	margin-right: auto;
	margin-left: auto;
}

/*--------------------------------------------------------------
# 7.0 - Clearings
--------------------------------------------------------------*/
.clearfix:before,
.clearfix:after,
.post-navigation .nav-links:before,
.post-navigation .nav-links:after,
.comment-navigation:before,
.comment-navigation:after {
	display: table;
	content: "";
}

.clearfix:after,
.post-navigation .nav-links:after,
.comment-navigation:after {
	clear: both;
}

/*--------------------------------------------------------------
# 8.0 - Layout Structure
--------------------------------------------------------------*/
.site {
	margin: 0;
	width: 100%;
}

.container {
	margin: 0 auto;
	padding: 0 2em;
	max-width: 1220px;
	width: 100%;
}

.site-content {
	padding-top: 2em;
}

.content-area {
	float: left;
	box-sizing: border-box;
	padding-right: 2em;
	width: 73%;
}

.sidebar {
	float: right;
	width: 27%;
}

/* No Sidebar & Centered Layout Template */
.no-sidebar .content-single,
.site-content .centered-content-area {
	float: none;
	margin: 0 auto;
	padding: 0;
	max-width: 900px;
	width: 100%;
}

/* Fullwidth Template */
.site-content .fullwidth-content-area {
	float: none;
	margin: 0;
	padding: 0;
	width: 100%;
	max-width: 100%;
}

/*--------------------------------------------------------------
# 9.0 - Header
--------------------------------------------------------------*/
.site-header {
	background: #ee4455;
	color: #fff;
}

.site-branding {
	float: left;
	margin: 1em 3em 1em 0;
	padding: 0;
	max-width: 100%;
}

.site-branding a:link,
.site-branding a:visited,
.site-branding a:hover {
	padding: 0;
	border: none;
	text-decoration: none;
}

.site-title {
	display: inline-block;
	margin: 0.25rem 0 0;
	padding: 0;
	color: #fff;
	text-decoration: none;
	font-weight: normal;
	font-size: 32px;
	font-size: 2rem;
	font-family: 'Montserrat', sans-serif;
}

.site-title a:link,
.site-title a:visited {
	color: #fff;
	-webkit-transition: all 0.2s ease;
	transition: all 0.2s ease;
}

.site-title a:hover,
.site-title a:active {
	color: #ccc;
}

.site-branding .custom-logo {
	margin: 0.25em 1em 0 0;
	padding: 0;
	max-width: 100%;
	height: auto;
	border: none;
	vertical-align: top;
}

.site-description {
	margin: -0.25rem 0 0.5rem;
	font-size: 13px;
	font-size: 0.8125rem;
}

/* Custom Header Image */
.header-image {
	text-align: center;
}

.header-image img {
	max-width: 2500px;
	width: 100%;
	height: auto;
	vertical-align: top;
}

/*--------------------------------------------------------------
# 10.0 - Navigation
--------------------------------------------------------------*/

/*--------------------------------------------------------------
## 10.1 - Main Navigation
--------------------------------------------------------------*/
.primary-navigation {
	float: left;
	margin: 1em 0;
}

.main-navigation-toggle {
	display: none;
}

.main-navigation-menu {
	position: relative;
	float: left;
	margin: 0;
	padding: 0;
	width: 100%;
	list-style-position: outside;
	list-style-type: none;
}

.main-navigation-menu li {
	float: left;
}

.main-navigation-menu a {
	display: block;
	padding: 1.2em;
	text-decoration: none;
	text-transform: uppercase;
	font-weight: normal;
	font-size: 15px;
	font-size: 0.9375rem;
	font-family: 'Montserrat', Tahoma, Arial;
	-webkit-transition: all 0.2s ease;
	transition: all 0.2s ease;
}

.main-navigation-menu > .menu-item-has-children > a:after {
	display: inline-block;
	margin: 0.4em 0 0 0.3em;
	content: '\f431';
	vertical-align: top;
	text-decoration: none;
	font-size: 16px;
	font-family: 'Genericons';
	line-height: 1;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

.main-navigation-menu a:link,
.main-navigation-menu a:visited {
	color: #fff;
	text-decoration: none;
}

.main-navigation-menu a:hover,
.main-navigation-menu a:active {
	color: #ccc;
}

.main-navigation-menu ul {
	position: absolute;
	z-index: 99;
	display: none;
	margin: 0;
	padding: 0;
	background: #fff;
	box-shadow: 0 1px 2px #bbb;
	color: #444;
	list-style-position: outside;
	list-style-type: none;
}

.main-navigation-menu ul li {
	position: relative;
	float: none;
}

.main-navigation-menu ul a {
	padding: 1em;
	min-width: 250px;
	min-width: 16rem;
	border-bottom: 1px solid #eee;
	font-size: 13px;
	font-size: 0.8125rem;
	-webkit-transition: none;
	transition: none;
}

.main-navigation-menu ul li:last-child > a {
	border-bottom: none;
}

.main-navigation-menu ul a:link,
.main-navigation-menu ul a:visited {
	color: #444;
}

.main-navigation-menu ul a:hover,
.main-navigation-menu ul a:active {
	color: #999;
}

.main-navigation-menu ul .menu-item-has-children > a:after {
	display: inline-block;
	margin: 0.3em 0 0 0.3em;
	color: #444;
	content: '\f431';
	vertical-align: top;
	text-decoration: none;
	font-size: 14px;
	font-family: 'Genericons';
	line-height: 1;
	-webkit-transform: rotate(270deg);
	-moz-transform: rotate(270deg);
	-o-transform: rotate(270deg);
	-ms-transform: rotate(270deg);
	transform: rotate(270deg);
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

.main-navigation-menu li ul ul {
	top: 0;
	left: 100%;
}

.main-navigation-menu li.menu-item-has-children:hover > ul,
.main-navigation-menu li.page_item_has_children:hover > ul,
.main-navigation-menu li.menu-item-has-children[aria-expanded="true"] > ul {
	display: block;
}

.main-navigation-menu li.current-menu-item > a {
	text-decoration: underline;
}

/* Mega Menu Styling */
.mega-menu-content .mega-menu-widget a:link,
.mega-menu-content .mega-menu-widget a:visited {
	color: #fff;
}
/* ... */

